load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//:generators"])

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "parse_req.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/codegenerator",
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/plugin:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = ["parse_req_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/plugin:go_default_library",
    ],
)
