load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_xtest",
    srcs = [
        "client_test.go",
        "integration_test.go",
        "main_test.go",
        "proto_error_test.go",
    ],
    deps = [
        "//examples/clients/abe:go_default_library",
        "//examples/clients/echo:go_default_library",
        "//examples/clients/unannotatedecho:go_default_library",
        "//examples/gateway:go_default_library",
        "//examples/proto/examplepb:go_default_library",
        "//examples/proto/sub:go_default_library",
        "//examples/server:go_default_library",
        "//runtime:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes/empty:go_default_library",
        "@org_golang_google_genproto//googleapis/rpc/status:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)
