load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = [
        "api_client.go",
        "api_response.go",
        "configuration.go",
        "examplepb_unannotated_simple_message.go",
        "unannotated_echo_service_api.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/clients/unannotatedecho",
    deps = ["@com_github_go_resty_resty//:go_default_library"],
)
